kubernetes/storybook/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storybook
  labels:
    app: storybook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storybook
  template:
    metadata:
      labels:
        app: storybook
    spec:
      containers:
        - name: storybook
          image: davidcamelo/components-ui:main
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 1
