kubernetes/storybook/storybook-service.yml
apiVersion: v1
kind: Service
metadata:
  name: storybook
  labels:
    app: storybook
spec:
  selector:
    app: storybook
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
