kubernetes/storybook/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storybook
  labels:
    app: storybook
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: storybook.davidcamelo.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: storybook
                port:
                  number: 4173
  tls:
    - hosts:
        - storybook.davidcamelo.com
      secretName: storybook-ingress
